# bayesian_optimisation_application

./: .gitignore  CMakeLists.txt  Makefile  README.md  draw.py  main.cpp  main.py  output.txt
backward_solution/: AbstractKernel.cpp  AbstractKernel.h  BayesianOptimizer.cpp  BayesianOptimizer.h  GaussianProcesses.cpp  GaussianProcesses.h  IFunction.h  IKernel.h  LinearSpace.cpp  LinearSpace.h  OptimizerEpoch.cpp  OptimizerEpoch.h  PendulumMSE.cpp  PendulumMSE.h  Simple2DFunction.cpp  Simple2DFunction.h  SimpleFunction.cpp  SquaredExponentialKernel.cpp  SquaredExponentialKernel.h
backward_solution/acquisition/: AcquisitionEI.cpp  AcquisitionEI.h  AcquisitionUCB.cpp  AcquisitionUCB.h  IAcquisition.h
backward_solution/functions/: IFunction.h  PendulumMSE.cpp  PendulumMSE.h  SimpleFunction.h
backward_solution/kernel/: IKernel.h  Matern52Kernel.cpp  Matern52Kernel.h  SquaredExponentialKernel.cpp  SquaredExponentialKernel.h
bayesian_optimization/: core.py  testing.py
bayesian_optimization/utils/: acquisition_functions.py  gp.py  kernels.py  utilities.py
forward_problem/: AbstractForwardSolver.cpp  AbstractForwardSolver.h  FullSystemFabric.cpp  FullSystemFabric.h  ISystemFabric.h  RK4Solver.cpp  RK4Solver.h  RK4SolverWithNoise.cpp  RK4SolverWithNoise.h  System.cpp  System.h  SystemAngleAndSpeedFabric.cpp  SystemAngleAndSpeedFabric.h  SystemFixedDissipationFabric.cpp  SystemFixedDissipationFabric.h  SystemOnlyAngleFabric.cpp  SystemOnlyAngleFabric.h  dissipative_pendulum.py  runge_kutta_4_solver.py  solver.py  system.cpp  system.h  testing.py
system_noise/: noise_creator.py  simple_noise_creator.py  testing.py
utils/: Boundaries.h  CholeskyMaster.cpp  CholeskyMaster.h  CholetskyMaster.cpp  LinearSpace.cpp  LinearSpace.h  Matrix.cpp  Matrix.h  SolutionCache.cpp  SolutionCache.h  Vector.cpp  Vector.h
utils/logs/: AbstractLogger.cpp  AbstractLogger.h  FileLogger.cpp  FileLogger.h  ILogger.cpp  ILogger.h
